--- a/view/index.html
+++ b/view/index.html
@@ -61,6 +61,9 @@
   <!-- Outputting result 2 -->
   <h3 class="mt-5 p-1" id="output2"></h3>
 
+  <!-- Outputting result 2 -->
+  <h3 class="mt-5 p-1" id="output3"></h3>
+
 </div>
 
 <!-- Scripts -->
